--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ category: contact
 ---
 
 <section class="inner">
-  <form action="http://formspree.io/contact@solstice.me" role="form" method="POST"> 
+  <form action="http://formspree.io/gabriel@solstice.me" role="form" method="POST"> 
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" name="name" class="form-control" required>
